--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,9 @@ JWT_SECRET=<"value">
 SERVER_PORT=<"value">
 BUCKET_NAME=<"value">
 BUCKET_SA=<"value">
+
+
+SMTPSERVER=smtp.gmail.com
+SMTPPORT=465
+SMTPUSERNAME=medialert.healthify@gmail.com
+SMTPPASSWORD=mcxxhawkhgaezcyp
