feat: update complaint-doctor

--- a/.env.example
+++ b/.env.example
@@ -5,11 +5,8 @@ DB_PORT=<"value">
 DB_NAME=<"value">
 JWT_SECRET=<"value">
 SERVER_PORT=<"value">
+OPENAI_API_KEY=<"value">
 BUCKET_NAME=<"value">
 BUCKET_SA=<"value">
 
 
-SMTPSERVER=smtp.gmail.com
-SMTPPORT=465
-SMTPUSERNAME=medialert.healthify@gmail.com
-SMTPPASSWORD=mcxxhawkhgaezcyp
