feat: update doctor complaint( env example, controllers, models, utils)

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@ BUCKET_NAME=<"value">
 BUCKET_SA=<"value">
 
 
+SMTPSERVER=<"value">
+SMTPPORT=<"value">
+SMTPUSERNAME=<"value">
+SMTPPASSWORD=<"value">
